web test cases automated

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "LoginTestChrome": "npx playwright test tests/login.spec.js -g 'Validate successful login using the provided valid credentials' --project=chromium",
+    "LoginTestChrome": "npx playwright test --project=chromium",
     "APITest": "npx playwright test tests/getApi.spec.js -g 'Get API test'  --project=chromium"
   },
   "keywords": [],
