--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "description": "",
   "devDependencies": {
     "@playwright/test": "^1.50.1",
-    "@types/node": "^22.13.1"
+    "@types/node": "^22.13.1",
+    "mocha": "^11.1.0"
+  },
+  "dependencies": {
+    "playwright": "^1.50.1"
   }
 }
